<resources>
    <string name="app_name">Shows on Netflix</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title">Title</string>
    <string name="dateline">Dateline</string>
    <string name="description_course">detail</string>
    <string name="description">description</string>
    <string name="list_movie">list movie</string>
    <string name="genre">genre</string>
    <string name="year">year</string>
    <string name="movie">Movie</string>
    <string name="tvShow">TV Show</string>
    <string name="netflix_logo">Logo</string>
    <string name="detail_image_poster">Detail Image Poster</string>
</resources>